--- a/tests/nineslice/project.yml
+++ b/tests/nineslice/project.yml
@@ -27,8 +27,8 @@ html5:
   script: 'game'
   width: 960
   height: 640
-  server_port: 8080
-  html_file: ''
+  serverPort: 8080
+  htmlFile: ''
   favicon: ''
   minify: false
 
